--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 .top-nav {
   width: 100%;
   background: rgba(120,120,120, 0.2)
-  border: solid 1px #f1f1f1;
+  border: solid 1px #e7ecf4;
 }
 
 .nav-list {
