--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ html {
 body {
   margin: 0 0 2rem;
   font-family: Raleway, sans-serif;
-  color: #1c1b1b;
+  color: #272727;
 }
 
 .top-nav {
   width: 100%;
   background: rgba(120,120,120, 0.2)
-  border: solid 1px #e7ecf4;
+  border: solid 1px #f1f1f1;
 }
 
 .nav-list {
