--- a/style.css
+++ b/style.css
@@ -14,13 +14,13 @@ body {
 
 .top-nav {
   width: 100%;
-  background: rgba(120,120,120, 0.2)
+  background: rgba(120,120,120, 0.2);
   border: solid 1px #e7ecf4;
 }
 
 .nav-list {
   display: flex;
-  margin: 0
+  margin: 0;
   padding: 0;
   list-style: none;
 }
